Fix logo alignment at two breakpoints

--- a/main.css
+++ b/main.css
@@ -320,6 +320,7 @@ textarea {
   .logo {
     height: 100px;
     width: 100%;
+    margin-right: -5px;
   }
 
 }
@@ -327,6 +328,10 @@ textarea {
 @media screen and (min-width: 700px) {
   #lgr-list-menu {
     display: none;
+  }
+
+  #header-right-side {
+    width: 25%;
   }
 
   nav {
@@ -355,6 +360,10 @@ textarea {
     max-width: 30%;
   }
 
+  .logo {
+    margin-right: -10px;
+  }
+
 }
 
 @media screen and (min-width: 858px) {
@@ -363,7 +372,6 @@ textarea {
   }
 
   nav {
-    /*margin: 75px auto auto 10px;*/
     font-size: 23px;
   }
 
